use reactive vars

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "apollo-cache-persist": "^0.1.1",
+    "apollo3-cache-persist": "^0.9.1",
     "graphql": "^15.5.0",
     "install": "^0.13.0",
     "npm": "^7.7.6",
