--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   "author": "Ken Frederick",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.22.1",
-    "bcrypt": "^5.0.1",
-    "connect-redis": "^5.1.0",
+    "apollo-server-express": "^2.25.3",
+    "bcryptjs": "^2.4.3",
+    "connect-redis": "^5.2.0",
     "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
     "express-http-to-https": "^1.1.4",
-    "express-session": "^1.17.1",
-    "graphql": "^15.5.0",
-    "graphql-redis-subscriptions": "^2.3.1",
-    "mongoose": "^5.12.2",
+    "express-session": "^1.17.2",
+    "graphql": "^15.7.2",
+    "graphql-redis-subscriptions": "^2.4.2",
+    "mongoose": "^5.13.13",
     "node-schedule": "^2.0.0",
     "nodemailer": "^6.5.0",
     "redis": "^3.0.2"
